--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/AllOrders.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/AllOrders.cshtml
@@ -1,22 +1,41 @@
-﻿@model string[]
+﻿@using Microsoft.AspNetCore.Http;
 
-<h2>Excel Content: @ViewBag.FileName</h2>
+@{
+    ViewData["Title"] = "AllOrders";
 
-@if (ViewBag.ExcelData != null)
-{
-    <table>
-        @foreach (var cell in ViewBag.ExcelData)
-        {
+}
+
+<h1>@ViewData["Title"]</h1>
+<div>
+    <table id="myTable" class="table table-bordered">
+        <thead>
             <tr>
-                @foreach (var item in cell)
-                {
-                    <td>@item.Text</td>
-                }
+                <th id="rowTable" class="table-info" >Order Data</th>
+                <th id="rowTable" class="table-info" > UserName</th>
+                <th id="rowTable" class="table-info">Email</th>
+                <th id="rowTable" class="table-info">Address</th>
+                <th id="rowTable" class="table-info" >ProductName</th>
+                <th id="rowTable" class="table-info" >OrderSum</th>
+                <th id="rowTable" class="table-info">File</th>
             </tr>
-        }
+        </thead>
+        <tbody>
+    @foreach (var list in ViewBag.Order)
+    {
+        <tr>
+                    <td id="rowTable" class="table-info">@list.createData</td>
+                    <td id="rowTable" class="table-info">@list.FirstName @list.LastName</td>
+                    <td id="rowTable" class="table-info">@list.Email</td>
+                    <td id="rowTable" class="table-info">@list.Address</td>
+                    <td id="rowTable" class="table-info">@list.ProductName</td>
+                    <td id="rowTable" class="table-info">@list.OrderSum</td>
+                    <td id="rowTable" class="table-info">@Html.ActionLink("Download Excel", "Download", "Home", new { id = @list.Id, FirstName = @list.FirstName, LastName = @list.LastName }, new { @class = "btn btn-primary" })</td>
+        </tr>
+    }
+        </tbody>
     </table>
-}
-else
-{
-    <p>Excel file not found.</p>
-}
+</div>
+<script>
+   
+   
+</script>
