--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
@@ -72,7 +72,7 @@
                         <div id="ProductNameUndCost">
 
                             <div>
-                                <h3>@item.Name</h3>
+                                <h3>@item.NameSystem</h3>
                             </div>
 
                             <div style="margin-left: auto;">
@@ -107,7 +107,7 @@
                         <div id="ProductNameUndCost">
 
                             <div>
-                                <h3>@item.Name</h3>
+                                <h3>@item.NameSystem</h3>
                             </div>
 
                             <div style="margin-left: auto;">
@@ -143,7 +143,7 @@
                         <div id="ProductNameUndCost">
 
                             <div>
-                                <h3>@item.Name</h3>
+                                <h3>@item.NameSystem</h3>
                             </div>
 
                             <div style="margin-left: auto;">
@@ -179,7 +179,7 @@
                         <div id="ProductNameUndCost">
 
                             <div>
-                                <h3>@item.Name</h3>
+                                <h3>@item.NameSystem</h3>
                             </div>
 
                             <div style="margin-left: auto;">
@@ -215,7 +215,7 @@
                         <div id="ProductNameUndCost">
 
                             <div>
-                                <h3>@item.Name</h3>
+                                <h3>@item.NameSystem</h3>
                             </div>
 
                             <div style="margin-left: auto;">
@@ -251,7 +251,7 @@
                         <div id="ProductNameUndCost">
 
                             <div>
-                                <h3>@item.Name</h3>
+                                <h3>@item.NameSystem</h3>
                             </div>
 
                             <div style="margin-left: auto;">
@@ -287,7 +287,7 @@
                         <div id="ProductNameUndCost">
 
                             <div>
-                                <h3>@item.Name</h3>
+                                <h3>@item.NameSystem</h3>
                             </div>
 
                             <div style="margin-left: auto;">
@@ -324,7 +324,7 @@
                         <div id="ProductNameUndCost">
 
                             <div>
-                                <h3>@item.Name</h3>
+                                <h3>@item.NameSystem</h3>
                             </div>
 
                             <div style="margin-left: auto;">
@@ -361,7 +361,7 @@
                         <div id="ProductNameUndCost">
 
                             <div>
-                                <h3>@item.Name</h3>
+                                <h3>@item.NameSystem</h3>
                             </div>
 
                             <div style="margin-left: auto;">
@@ -398,7 +398,7 @@
                         <div id="ProductNameUndCost">
 
                             <div>
-                                <h3>@item.Name</h3>
+                                <h3>@item.NameSystem</h3>
                             </div>
 
                             <div style="margin-left: auto;">
