--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Aussenzylinder_Rundzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Aussenzylinder_Rundzylinder.cshtml
@@ -2,30 +2,48 @@
 @{
     ViewData["Title"] = "Edit";
 }
-<h1>Edit</h1>
+<h1>Edit Aussenzylinder \ Rundzylinder</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="SaveAussenzylinder_Rundzylinder">
+        <form asp-action="SaveAussenzylinder_Rundzylinder" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="schliessanlagenId" class="control-label"></label>
-                <input asp-for="schliessanlagenId" class="form-control" />
-                <span asp-validation-for="schliessanlagenId" class="text-danger"></span>
+                <h3>Type</h3>
+                @Html.HiddenFor(x => x.Id)
+                <select required onchange="SelectionNewType(event.target.value)" class="form-select" id="schliessanlagenId">
+                    <option>Profil-Doppelzylinder</option>
+                    <option>Profil-Halbzylinder</option>
+                    <option>Profil-Knaufzylinder</option>
+                    <option>Hebelzylinder</option>
+                    <option>Vorhangschloss</option>
+                    <option selected>Aussenzylinder_Rundzylinder</option>
+                </select>
+                <input id="AussenType" asp-for="schliessanlagenId" type="hidden" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="companyName" class="control-label"></label>
+                <input required asp-for="companyName" class="form-control" />
+                <span asp-validation-for="companyName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NameSystem" class="control-label"></label>
+                <input required asp-for="NameSystem" class="form-control" />
+                <span asp-validation-for="NameSystem" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input required asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="description" class="control-label"></label>
-                <input asp-for="description" class="form-control" />
+                <input required asp-for="description" class="form-control" />
                 <span asp-validation-for="description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Cost" class="control-label"></label>
-                <input asp-for="Cost" class="form-control" />
+                <input required asp-for="Cost" class="form-control" />
                 <span asp-validation-for="Cost" class="text-danger"></span>
             </div>
 
@@ -34,14 +52,8 @@
                 <input asp-for="ImageName" class="form-control" />
                 <span asp-validation-for="ImageName" class="text-danger"></span>
             </div>
-
-            <label asp-for="ImageFile" class="control-label"></label>
-            <br />
-            <input asp-for="ImageFile" accept="image/*" />
-            <span asp-validation-for="ImageFile" class="text-danger"></span>
-            <br />
-            @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
-            <hr />
+           <hr />
+        
             @if (ViewBag.optionV == true)
             {
                 <div>
@@ -67,14 +79,13 @@
                     </div>
                 </div>
             }
-            
             <input type="submit" value="Save" class="btn btn-primary" />
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" style="color:black">Back to List</a>
 </div>
 
 @section Scripts {
@@ -82,3 +93,37 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+<script>
+
+    let schliessanlagenType = document.getElementById("schliessanlagenId");
+    let AussenType = document.getElementById("AussenType");
+
+    function SelectionNewType(value) 
+    {
+        if (value == "Profil-Doppelzylinder") 
+        {
+            AussenType.value = 1;
+        }
+        if (value == "Profil-Halbzylinder") 
+        {
+            AussenType.value = 2;
+        }
+        if (value == "Profil-Knaufzylinder") 
+        {
+            AussenType.value = 3;
+        }
+        if (value == "Hebelzylinder") 
+        {
+            AussenType.value = 4;
+        }
+        if (value == "Vorhangschloss") 
+        {
+            AussenType.value = 5;
+        }
+        if (value == "Aussenzylinder_Rundzylinder") 
+        {
+            AussenType.value = 6;
+        }
+    }
+    
+</script>
