--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
@@ -83,7 +83,7 @@
     </div>
     <div>
 
-        <h4 id="input">ALL Profil Doppelzylinder</h4>
+        <h4 id="input">ALL Vorhangschloss</h4>
         @using (Html.BeginForm("VorhangschlossRout", "Home", FormMethod.Get))
         {
             <table class="table table-bordered">
@@ -107,7 +107,7 @@
                             <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
                             <td id="rowTable " class="table-info"><h6 id="cost">@item.Cost</h6></td>
 
-                            <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
+                            <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Vorhangschloss","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
                             <td id="rowTable" class="table-info">
                                 <a class="compItem" href="@Url.Action("ProductVorhan","Home", new { item.Id })">
                                     <img src="@("/Image/options.png")" height="30" width="30" />
